# mcp-ariadne-codegen-example

./: README.md  pyproject.toml
graphql_to_mcp/: main.py  queries.graphql
graphql_to_mcp/graphql_client/: __init__.py  client.py  enums.py  fragments.py  input_types.py  list_products.py  product_by_id.py  product_search.py
